still working on credit photo formatting

--- a/trampled flowers/credits.html
+++ b/trampled flowers/credits.html
@@ -44,21 +44,35 @@
     <div class="sup">
     </div>
     <!-- Photo Grid -->
-            <div class="creditheader"> 
-              <span>Credits</span>
-            </div>
-    <div class="bigcredit"> 
-        <div class="littlecredit">
-            <div class="babycredit">
-                <div class="babyercredit"></div>
-                <div class="babyercredit"></div>
-            </div>
-            <div class="babycredit"></div>
-        </div>
-        <div class="littlecredit">
-        </div>
-    </div>
-      
+                                <div class="creditheader"> 
+                                    <span>The Collective</span>
+                                </div>
+            <div class="row"> 
+                <div class="credcolumn">
+                  <div class="credinside">
+                            <img class="credpic" src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Credit%20Photos/anders%20credit2.png" style="width:100%">
+                  </div>
+                                <div class="credinside">
+                                    <div class="credtext">
+                                        <span>Photography</span>
+                                        <span>Liam Scott</span>
+                                    </div>
+                                    <div class="credtext">
+                                        <span>Photography</span>
+                                        <span>Liam Scott</span>
+                                    </div>
+                  </div>
+                </div>
+                <div class="credcolumn">
+                  <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/liam%3Aaddi%20edits/saba.jpg" style="width:100%">
+                </div>  
+                <div class="credcolumn">
+                   <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Best%20JPGS%20(Anders)/P7180445.jpg" style="width:100%">
+                </div>
+                <div class="credcolumn">
+                  <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/liam%3Aaddi%20edits/princessduel.jpg" style="width:100%">
+                </div>
+              </div>
     
     <div class="quotebox">
         <span>*See Credits for More Information</span>
