--- a/trampled flowers/credits.html
+++ b/trampled flowers/credits.html
@@ -54,8 +54,7 @@
                   </div>
                                 <div class="credinside">
                                     <div class="credtext">
-                                        <span>Photography</span>
-                                        <span>Liam Scott</span>
+                                            <span>Anders Law</span>
                                     </div>
                                     <div class="credtext">
                                         <span>Photography</span>
