--- a/trampled flowers/credits.html
+++ b/trampled flowers/credits.html
@@ -17,8 +17,9 @@
         <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
         <link rel="shortcut icon" type="image/x-icon" href="items/icons8-star-64.png">
     </head>
+    <!--logos down here-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <!-- Visible content for the page-->
-  <!--main page text below-->
   <body>
 
     <!-- Header -->
@@ -47,35 +48,69 @@
                                 <div class="creditheader"> 
                                     <span>The Collective</span>
                                 </div>
-            <div class="row"> 
-                <div class="credcolumn">
-                  <div class="credinside">
-                            <img class="credpic" src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Credit%20Photos/anders%20credit2.png" style="width:100%">
-                  </div>
-                                <div class="credinside">
-                                    <div class="credtext">
-                                            <span>Anders Law</span>
-                                    </div>
-                                    <div class="credtext">
-                                        <span>Photography</span>
-                                        <span>Liam Scott</span>
-                                    </div>
-                  </div>
+          <div class="row"> 
+
+            <div class="credcolumn">
+              <div class="credinside">
+                <img class="credpic" src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Credit%20Photos/anders%20credit2.png" style="width:100%">
+              </div>
+              <div class="credinside">
+                <div class="credtext">
+                  <span class="subcredheader" >Anders Law</span>
                 </div>
-                <div class="credcolumn">
-                  <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/liam%3Aaddi%20edits/saba.jpg" style="width:100%">
-                </div>  
-                <div class="credcolumn">
-                   <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Best%20JPGS%20(Anders)/P7180445.jpg" style="width:100%">
-                </div>
-                <div class="credcolumn">
-                  <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/liam%3Aaddi%20edits/princessduel.jpg" style="width:100%">
+                <div class="credtext">
+                  <span class="subcredsub" >Product Development Lead, Designer, Head of Photography, Web Developer</span>
                 </div>
               </div>
-    
-    <div class="quotebox">
-        <span>*See Credits for More Information</span>
-    </div>
+              <div class="credinside">
+                <div class="logogroup">
+                  <a class="logos" href="https://www.linkedin.com/in/anders-law-b0033a20a/" target="_blank" rel="nofollow noopener noreferrer">
+                      <i class="fa-brands fa-linkedin"></i>
+                  </a>
+                  <a class="logos" href="https://github.com/weekendpapa?tab=repositories" target="_blank" rel="nofollow noopener noreferrer">
+                      <i class="fa-brands fa-github"></i>
+                  </a>
+                  <a class="logos" href="https://www.youtube.com/channel/UClS_jO70hsDiLzHre1ibTCQ" target="_blank" rel="nofollow noopener noreferrer">
+                      <i class="fa-brands fa-youtube"></i>
+                  </a>
+                </div>   
+              </div>
+            </div>
+
+                <div class="credcolumn">
+                  <div class="credinside">
+                    <img class="credpic" src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Credit%20Photos/liam%20credit1.png" style="width:100%">
+                  </div>
+                  <div class="credinside">
+                    <div class="credtext">
+                      <span class="subcredheader" >Liam Scott</span>
+                    </div>
+                    <div class="credtext">
+                      <span class="subcredsub" >Creative Director, Design Lead, Head Model Coordinator, Cinematographer</span>
+                    </div>
+                  </div>
+                  <div class="credinside">
+                    <img class="credpic" src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Credit%20Photos/anders%20credit2.png" style="width:100%">
+                  </div>
+                </div>  
+
+                <div class="credcolumn">
+                  <div class="credinside">
+                    <img class="credpic" src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Credit%20Photos/Jackson%20Credit%201.png" style="width:100%">
+                  </div>
+                  <div class="credinside">
+                    <div class="credtext">
+                      <span class="subcredheader" >Jackson Dallas</span>
+                    </div>
+                    <div class="credtext">
+                      <span class="subcredsub" >Special Projects Lead, Designer, Garmet Graphic Designer, Head of Fabric Sourcing  </span>
+                    </div>
+                  </div>
+                  <div class="credinside">
+                   
+                     </div>
+                </div>
+          </div>
 
     </body>
 </html>
