tf connect is up!

--- a/ka(re)do.html
+++ b/ka(re)do.html
@@ -59,6 +59,7 @@
             <ul class="sidebar">
                 <li><a class="navtext" href="index.html">Home</a></li>
                 <li><a class="navtext" href="re(sume).html">Resume</a></li>
+                <li><a class="navtext" href="https://trampledflowers.org">Trampled Flowers</a></li>
                 <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
                 <li><a class="navtext" href="FDSA.html">FDSA</a></li>
                 <li><a class="navtext" href="3d.html">3D Modeling</a></li>
