--- a/(re)txmi.html
+++ b/(re)txmi.html
@@ -50,6 +50,7 @@
             <ul class="sidebar">
                 <li><a class="navtext" href="index.html">Home</a></li>
                 <li><a class="navtext" href="re(sume).html">Resume</a></li>
+                <li><a class="navtext" href="https://trampledflowers.org">Trampled Flowers</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
                 <li><a class="navtext" href="FDSA.html">FDSA</a></li>
                 <li><a class="navtext" href="3d.html">3D Modeling</a></li>
