--- a/ghutra.html
+++ b/ghutra.html
@@ -43,6 +43,7 @@
             <ul class="sidebar">
                 <li><a class="navtext" href="index.html">Home</a></li>
                 <li><a class="navtext" href="re(sume).html">Resume</a></li>
+                <li><a class="navtext" href="https://trampledflowers.org">Trampled Flowers</a></li>
                 <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
                 <li><a class="navtext" href="FDSA.html">FDSA</a></li>
