--- a/re(sume).html
+++ b/re(sume).html
@@ -41,6 +41,7 @@
         <nav>
             <ul class="sidebar">
                 <li><a class="navtext" href="index.html">Home</a></li>
+                <li><a class="navtext" href="https://trampledflowers.org">Trampled Flowers</a></li>
                 <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
                 <li><a class="navtext" href="FDSA.html">FDSA</a></li>
