employment tracker lol

--- a/ghutra.html
+++ b/ghutra.html
@@ -44,6 +44,7 @@
                 <li><a class="navtext" href="index.html">Home</a></li>
                 <li><a class="navtext" href="re(sume).html">Resume</a></li>
                 <li><a class="navtext" href="https://trampledflowers.org">Trampled Flowers</a></li>
+                <li><a class="navtext" href="job.html">Employment Tracker</a></li>
                 <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
                 <li><a class="navtext" href="FDSA.html">FDSA</a></li>
