--- a/(re)txmi.html
+++ b/(re)txmi.html
@@ -51,6 +51,7 @@
                 <li><a class="navtext" href="index.html">Home</a></li>
                 <li><a class="navtext" href="re(sume).html">Resume</a></li>
                 <li><a class="navtext" href="https://trampledflowers.org">Trampled Flowers</a></li>
+                <li><a class="navtext" href="job.html">Employment Tracker</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
                 <li><a class="navtext" href="FDSA.html">FDSA</a></li>
                 <li><a class="navtext" href="3d.html">3D Modeling</a></li>
