--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <ul class="sidebar">
                 <li><a class="navtext" href="re(sume).html">Resume</a></li>
                 <li><a class="navtext" href="https://trampledflowers.org">Trampled Flowers</a></li>
+                <li><a class="navtext" href="job.html">Employment Tracker</a></li>
                 <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
                 <li><a class="navtext" href="FDSA.html">FDSA</a></li>
