--- a/re(sume).html
+++ b/re(sume).html
@@ -19,7 +19,7 @@
     <div class="biggestflex">
     <!-- leftside begins here -->
         <main class="bigboxleft">
-            <img class="resumeimage" src="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume%20jpg.jpg"/>
+            <img class="resumeimage" src="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume.jpg"/>
                 <div class="bottomtextbox">
                     <span>
                         <a href="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume.pdf" target="_blank" rel="nofollow noopener noreferrer">Click here for PDF!</a>
