--- a/index.html
+++ b/index.html
@@ -16,66 +16,84 @@
         <!--model viewer-->
         <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
         <link rel="shortcut icon" type="image/x-icon" href="items/icons8-star-64.png">
+        <!--=============== REMIXICONS ===============-->
+      <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
   <!-- Visible content for the page-->
   <!--main page text below-->
   <body class="mainbody">
-    <div class="papaflex">
-        <aside class="homeaside">
-            <div class="textcontainer">
-                <span class="asidetext">an</span>
-                <span class="asidetext nametext">Anders Law</span>
-                <span class="asidetext">website</span>
+    <div class="topnav" id="myTopnav">
+        <a href="#home" class="active">AndersLaw</a>
+        <a href="#news">Contact</a>
+        <a href="#contact">Programming</a>
+
+        <div class="dropdown">
+          <button class="dropbtn">Lifestyle</button>
+          <div class="dropdown-content">
+            <a href="#">Photoshop</a>
+            <a href="#">Illustrator</a>
+            <a href="#">Premier</a>
+            <a href="#">Illustrator</a>
+            <a href="#">Premier</a>
+          </div>
+        </div>
+
+        <a href="#about">Academia</a>
+
+        <div class="dropdown">
+            <button class="dropbtn">Content</button>
+            <div class="dropdown-content">
+              <a href="#">Photoshop</a>
+              <a href="#">Illustrator</a>
+              <a href="#">Premier</a>
+              <a href="#">Illustrator</a>
+              <a href="#">Premier</a>
             </div>
-            <!--buttonstuff in here-->
-            <div class="buttonholder">
-                <button class="navbutton" onclick=showsidebar()>
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
-                </button>
-                <span class="navgone">Mobile Version of Anders Law's Portfolio is Still in Progress! <br> Please Use Desktop Browser. <br> Thank You! </span>
+          </div>
+
+        <a href="#about">Fashion</a>
+        <a href="#about">Professional</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+      </div>
+
+
+
+<!--parallax-->
+
+<section class="1">
+        <section class="parallax">
+            <div class="parallax-inner">
+                <br>
+                <h1>Forests</h1>
+                <br>
             </div>
-        </aside>
-    <!-- navbar stuff-->
-        <nav>
-            <ul class="sidebar">
-                <li><a class="navtext" href="re(sume).html">Resume</a></li>
-                <li><a class="navtext" href="https://trampledflowers.org">Trampled Flowers</a></li>
-                <li><a class="navtext" href="job.html">Employment Tracker</a></li>
-                <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
-                <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
-                <li><a class="navtext" href="FDSA.html">FDSA</a></li>
-                <li><a class="navtext" href="3d.html">3D Modeling</a></li>
-                <li><a class="navtext" href="skatew.html">Stattrak</a></li>
-                <li><a class="navtext" href="ghutra.html">Ghutra</a></li>
-                <li><a class="navtext" href="contact.html">Contact</a></li>
-                <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-            </ul>
-        </nav>
-    <!-- stuff for the side coloum with the picture-->
-        <main class="homemain">
-            <div class="homemodel">
-                <model-viewer id="orbit-demo" interpolation-decay="200" src="3d assets/card9.glb" 
-                camera-orbit="250deg 75deg 100%"
-                camera-controls min-field-of-view='50deg' max-field-of-view='50deg'
-                interaction-prompt="none"
-                alt="A 3D model of a card"></model-viewer>
-                    <script>
-                    (() => {
-                    const modelViewer = document.querySelector('#orbit-demo');
-                    const orbitCycle = [
-                        '45deg 55deg 4m',
-                        '-60deg 110deg 2m',
-                        modelViewer.cameraOrbit
-                    ];
-                    setInterval(() => {
-                        const currentOrbitIndex = orbitCycle.indexOf(modelViewer.cameraOrbit);
-                        modelViewer.cameraOrbit =
-                            orbitCycle[(currentOrbitIndex + 1) % orbitCycle.length];
-                    }, 3000);
-                    })();
-                    </script>
-            </div>
-        </main>
-    </div>
+        </section>
+    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
+    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
+    <section class="parallax-1">
+        <div class="parallax-inner">
+            <br>
+            <h1>Beaches</h1>
+            <br>
+        </div>
+    </section>
+    </section>
+
+    <section class="2">
+    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
+    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
+    <section class="parallax-2">
+        <div class="parallax-inner">
+            <br>
+            <h1>Mountains</h1>
+            <br>
+        </div>
+    </section>
+    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
+    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
+    </section>
+
+
   </body>
 </html>
