not sure actually

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!--main page text below-->
   <body class="mainbody">
     <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">AndersLaw</a>
+        <a href="#" class="active">AndersLaw</a>
         <a href="#news">Contact</a>
         <a href="#contact">Programming</a>
 
