--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <section class="parallax">
             <div class="parallax-inner">
                 <br>
-                <h1>Forests</h1>
+                <h1>Fore</h1>
                 <br>
             </div>
         </section>
@@ -74,7 +74,7 @@
     <section class="parallax-1">
         <div class="parallax-inner">
             <br>
-            <h1>Beaches</h1>
+            <h1>Beac</h1>
             <br>
         </div>
     </section>
@@ -86,7 +86,7 @@
     <section class="parallax-2">
         <div class="parallax-inner">
             <br>
-            <h1>Mountains</h1>
+            <h1>Mou</h1>
             <br>
         </div>
     </section>
