logo update started

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
   <!--main page text below-->
   <body class="mainbody">
     <div class="topnav" id="myTopnav">
-        <a href="#" class="active">AndersLaw</a>
+
+        <a href="#" class="active">
+          <img class="derspink" src="" />
+        </a>
+
         <a href="#news">Contact</a>
         <a href="#contact">Programming</a>
 
