lotta nav, parallax, and mobile fixes

--- a/index.html
+++ b/index.html
@@ -26,38 +26,65 @@
     <div class="topnav" id="myTopnav">
 
         <a href="#" class="active">
-          <img class="derspink" src="" />
+            <img class="derspink" src="https://storage.googleapis.com/derswebsitebucket/logo/PINKFirefly%20bubbling%20liquid%20text%20on%20black%20background%2014379.jpg" />
         </a>
 
-        <a href="#news">Contact</a>
-        <a href="#contact">Programming</a>
-
         <div class="dropdown">
-          <button class="dropbtn">Lifestyle</button>
+          <button class="dropbtn">About Me</button>
           <div class="dropdown-content">
-            <a href="#">Photoshop</a>
-            <a href="#">Illustrator</a>
-            <a href="#">Premier</a>
-            <a href="#">Illustrator</a>
-            <a href="#">Premier</a>
+            <a href="#">About Me</a>
+            <a href="#">Contact</a>
+            <a href="#">Comment</a>
+          </div>
+        </div>
+        
+        <div class="dropdown">
+          <button class="dropbtn">Programming</button>
+          <div class="dropdown-content">
+            <a href="#">Github</a>
+            <a href="#">Processing</a>
+            <a href="#">Past Websites</a>
           </div>
         </div>
 
-        <a href="#about">Academia</a>
+        <div class="dropdown">
+          <button class="dropbtn">Behind the Camera</button>
+          <div class="dropdown-content">
+            <a href="#">Youtube</a>
+            <a href="#">Photo Collections</a>
+          </div>
+        </div>
 
         <div class="dropdown">
-            <button class="dropbtn">Content</button>
+          <button class="dropbtn">Academia</button>
+          <div class="dropdown-content">
+            <a href="#">StatTrak</a>
+            <a href="#">Ghutra</a>
+            <a href="#">Degree</a>
+          </div>
+        </div>
+
+        <div class="dropdown">
+            <button class="dropbtn">Graphic Design</button>
             <div class="dropdown-content">
               <a href="#">Photoshop</a>
               <a href="#">Illustrator</a>
-              <a href="#">Premier</a>
-              <a href="#">Illustrator</a>
-              <a href="#">Premier</a>
+              <a href="#">Kaledo</a>
+              <a href="#">3D Design</a>
             </div>
           </div>
 
-        <a href="#about">Fashion</a>
-        <a href="#about">Professional</a>
+          <div class="dropdown">
+            <button class="dropbtn">Fashion Collections</button>
+            <div class="dropdown-content">
+              <a href="#">FDSA</a>
+              <a href="#">Trampled Flowers</a>
+              <a href="#">TXMI Capstone</a>
+            </div>
+          </div>
+
+
+        <a href="#about">Resume</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
       </div>
 
@@ -68,13 +95,14 @@
 <section class="1">
         <section class="parallax">
             <div class="parallax-inner">
-                <br>
+              <br>
                 <h1>Fore</h1>
                 <br>
             </div>
         </section>
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
+    <div class="logopageholder">
+        <img class="logopage" src="https://storage.googleapis.com/derswebsitebucket/logo/PINKFirefly%20bubbling%20liquid%20text%20on%20black%20background%2014379.jpg" />
+    </div>
     <section class="parallax-1">
         <div class="parallax-inner">
             <br>
@@ -85,8 +113,7 @@
     </section>
 
     <section class="2">
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
+    <h3>This website serves as the portfolio for Anders Law, as well as part of the portfolio itself. Coded from scratch using HTML, CSS, and Javascript, this site aims to illustrait Anders different skills and hobbies. By using the navigation bar at the top, you can visit different pages and explore new and exciting creations. For optimal viewing experience, please use a desktop browser when visiting this page. Thank you for stopping by.</h3>
     <section class="parallax-2">
         <div class="parallax-inner">
             <br>
@@ -94,9 +121,8 @@
             <br>
         </div>
     </section>
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
-    </section>
+    <div class="buttdiv">  <a class="bttbutt" href="#">Back to Top</a>  </div>
+     </section>
 
 
   </body>
