--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <script type="text/javascript" src="java.js"></script>
         <!--model viewer-->
         <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
-        <link rel="shortcut icon" type="image/x-icon" href="items/icons8-star-64.png">
+        <link rel="shortcut icon" type="image/x-icon" href="https://storage.googleapis.com/derswebsitebucket/logo/fav%20pink%20png.png">
         <!--=============== REMIXICONS ===============-->
       <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
