--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="dropdown">
           <button class="dropbtn">Behind the Camera</button>
           <div class="dropdown-content">
-            <a href="#">Youtube</a>
+            <a href="https://www.youtube.com/@weekendpapa">Youtube</a>
             <a href="#">Photo Collections</a>
           </div>
         </div>
@@ -69,7 +69,7 @@
             <div class="dropdown-content">
               <a href="#">Photoshop</a>
               <a href="#">Illustrator</a>
-              <a href="#">Kaledo</a>
+              <a href="ka(re)do.html">Kaledo</a>
               <a href="#">3D Design</a>
             </div>
           </div>
@@ -78,13 +78,20 @@
             <button class="dropbtn">Fashion Collections</button>
             <div class="dropdown-content">
               <a href="#">FDSA</a>
-              <a href="#">Trampled Flowers</a>
+              <a href="https://trampledflowers.org">Trampled Flowers</a>
               <a href="#">TXMI Capstone</a>
             </div>
           </div>
 
 
-        <a href="re(sume).html">Resume</a>
+          <div class="dropdown">
+          <button class="dropbtn">Professional</button>
+          <div class="dropdown-content">
+            <a href="re(sume).html">Resume</a>
+            <a href="https://www.linkedin.com/in/anders-law">Linkedin</a>
+          </div>
+        </div>
+
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
       </div>
 
