--- a/diploma.html
+++ b/diploma.html
@@ -3,7 +3,7 @@
     
   <!-- Metadata for the page -->
     <head>
-        <title>Resume</title>
+        <title>Diploma</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="(pages)re.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -59,8 +59,8 @@
           <button class="dropbtn">Academia</button>
           <div class="dropdown-content">
             <a href="skatew.html">StatTrak</a>
-            <a href="ghutra.html">Ghutra</a>
-            <a href="diploma.html">Diploma</a>
+            <a href="#">Ghutra</a>
+            <a href="#">Diploma</a>
           </div>
         </div>
 
@@ -83,7 +83,6 @@
             </div>
           </div>
 
-
           <div class="dropdown">
             <button class="dropbtn">Professional</button>
             <div class="dropdown-content">
@@ -91,17 +90,16 @@
               <a href="https://www.linkedin.com/in/anders-law">Linkedin</a>
             </div>
           </div>
-
+        
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
       </div>
 
 
 
 
-      <div class="backdiv1">
+      <div class="backdiv2">
         <div class="leftdiv">
-            <img class="resumeholder" src="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume.jpg" />
-            <a class="downloadbutton" href="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume.pdf" download>Download Here</a>
+            <img class="diplomaholder" src="https://storage.googleapis.com/derswebsitebucket/Screenshot%202024-10-10%20at%2010.56.48%E2%80%AFPM.png" />
         </div>
         <div class="rightdiv">
         </div>
