--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="dropdown">
           <button class="dropbtn">Programming</button>
           <div class="dropdown-content">
-            <a href="#">Github</a>
+            <a href="https://github.com/weekendpapa">Github</a>
             <a href="#">Processing</a>
             <a href="#">Past Websites</a>
           </div>
@@ -60,7 +60,7 @@
           <div class="dropdown-content">
             <a href="skatew.html">StatTrak</a>
             <a href="ghutra.html">Ghutra</a>
-            <a href="#">Degree</a>
+            <a href="diploma.html">Diploma</a>
           </div>
         </div>
 
@@ -77,7 +77,7 @@
           <div class="dropdown">
             <button class="dropbtn">Fashion Collections</button>
             <div class="dropdown-content">
-              <a href="#">FDSA</a>
+              <a href="FDSA.html">FDSA</a>
               <a href="https://trampledflowers.org">Trampled Flowers</a>
               <a href="#">TXMI Capstone</a>
             </div>
