--- a/ka(re)do.html
+++ b/ka(re)do.html
@@ -41,7 +41,7 @@
         <div class="dropdown">
           <button class="dropbtn">Programming</button>
           <div class="dropdown-content">
-            <a href="#">Github</a>
+            <a href="https://github.com/weekendpapa">Github</a>
             <a href="#">Processing</a>
             <a href="#">Past Websites</a>
           </div>
@@ -60,7 +60,7 @@
           <div class="dropdown-content">
             <a href="skatew.html">StatTrak</a>
             <a href="ghutra.html">Ghutra</a>
-            <a href="#">Degree</a>
+            <a href="diploma.html">Diploma</a>
           </div>
         </div>
 
@@ -77,7 +77,7 @@
           <div class="dropdown">
             <button class="dropbtn">Fashion Collections</button>
             <div class="dropdown-content">
-              <a href="#">FDSA</a>
+              <a href="FDSA.html">FDSA</a>
               <a href="https://trampledflowers.org">Trampled Flowers</a>
               <a href="#">TXMI Capstone</a>
             </div>
@@ -119,6 +119,8 @@
             <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/weave/weave4web_Blood%20Orangecropped.jpg" />
             <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/weave/weave4web_Cool%20Breezecropped.jpg" />
             <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/weave/weave4web_Seashellscropped.jpg" />
+
+            <span class="imgtitlegone">Fall/Winter 23' "Silver Linings: A Light in the Dark"</span>
         </div>
         <div class="rightdiv2">
         </div>
