--- a/diploma.html
+++ b/diploma.html
@@ -59,8 +59,8 @@
           <button class="dropbtn">Academia</button>
           <div class="dropdown-content">
             <a href="skatew.html">StatTrak</a>
-            <a href="#">Ghutra</a>
-            <a href="#">Diploma</a>
+            <a href="ghutra.html">Ghutra</a>
+            <a href="diploma.html">Diploma</a>
           </div>
         </div>
 
@@ -79,7 +79,7 @@
             <div class="dropdown-content">
               <a href="FDSA.html">FDSA</a>
               <a href="https://trampledflowers.org">Trampled Flowers</a>
-              <a href="#">TXMI Capstone</a>
+              <a href="(re)txmi.html">TXMI Capstone</a>
             </div>
           </div>
 
