--- a/ka(re)do.html
+++ b/ka(re)do.html
@@ -69,7 +69,7 @@
             <div class="dropdown-content">
               <a href="#">Photoshop</a>
               <a href="#">Illustrator</a>
-              <a href="#">Kaledo</a>
+              <a href="ka(re)do.html">Kaledo</a>
               <a href="#">3D Design</a>
             </div>
           </div>
@@ -79,7 +79,7 @@
             <div class="dropdown-content">
               <a href="FDSA.html">FDSA</a>
               <a href="https://trampledflowers.org">Trampled Flowers</a>
-              <a href="#">TXMI Capstone</a>
+              <a href="(re)txmi.html">TXMI Capstone</a>
             </div>
           </div>
 
