--- a/re(sume).html
+++ b/re(sume).html
@@ -79,7 +79,7 @@
             <div class="dropdown-content">
               <a href="FDSA.html">FDSA</a>
               <a href="https://trampledflowers.org">Trampled Flowers</a>
-              <a href="#">TXMI Capstone</a>
+              <a href="(re)txmi.html">TXMI Capstone</a>
             </div>
           </div>
 
