--- a/diploma.html
+++ b/diploma.html
@@ -67,10 +67,10 @@
         <div class="dropdown">
             <button class="dropbtn">Graphic Design</button>
             <div class="dropdown-content">
-              <a href="#">Photoshop</a>
-              <a href="#">Illustrator</a>
+              <a href="photoshop.html">Photoshop</a>
+              <a href="illustrator.html">Illustrator</a>
               <a href="ka(re)do.html">Kaledo</a>
-              <a href="#">3D Design</a>
+              <a href="3d.html">3D Design</a>
             </div>
           </div>
 
