--- a/gallery.html
+++ b/gallery.html
@@ -3,9 +3,9 @@
     
   <!-- Metadata for the page -->
     <head>
-        <title>HomePage</title>
+        <title>Kaledo</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="(home)re.css" />
+        <link rel="stylesheet" href="(pages)re.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--Google fonts stuff below-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,10 +22,10 @@
     </head>
   <!-- Visible content for the page-->
   <!--main page text below-->
-  <body class="mainbody">
+  <body class="mainbody4">
     <div class="topnav" id="myTopnav">
 
-        <a href="#" class="active">
+        <a href="index.html" class="active">
             <img class="derspink" src="https://storage.googleapis.com/derswebsitebucket/logo/PINKFirefly%20bubbling%20liquid%20text%20on%20black%20background%2014379.jpg" />
         </a>
 
@@ -83,54 +83,48 @@
             </div>
           </div>
 
-
           <div class="dropdown">
-          <button class="dropbtn">Professional</button>
-          <div class="dropdown-content">
-            <a href="re(sume).html">Resume</a>
-            <a href="https://www.linkedin.com/in/anders-law">Linkedin</a>
+            <button class="dropbtn">Professional</button>
+            <div class="dropdown-content">
+              <a href="re(sume).html">Resume</a>
+              <a href="https://www.linkedin.com/in/anders-law">Linkedin</a>
+            </div>
           </div>
-        </div>
+        
 
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
       </div>
 
 
 
-<!--parallax-->
 
-<section class="1">
-        <section class="parallax">
-            <div class="parallax-inner">
-              <br>
-                <h1>Fore</h1>
-                <br>
-            </div>
-        </section>
-    <div class="logopageholder">
-        <img class="logopage" src="https://storage.googleapis.com/derswebsitebucket/logo/PINKFirefly%20bubbling%20liquid%20text%20on%20black%20background%2014379.jpg" />
-    </div>
-    <section class="parallax-1">
-        <div class="parallax-inner">
-            <br>
-            <h1>Beac</h1>
-            <br>
+      <div class="backdiv3">
+        <div class="leftdiv2">
+            <span class="imgtitle">NorCal Ranch</span>
+                <div class="scrollcontainer">
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/edits/P9130003.jpg" />
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/edits/P9130007.jpg" />
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/edits/P9130010.jpg" />
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/edits/P9130012.jpg" />
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/edits/P9130014.jpg" />
+                    <img class="imgholder2" src="https://storage.googleapis.com/derswebsitebucket/gallery/edits/P9160034.jpg" />
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/edits/P9160036.jpg" />
+                    <img class="imgholder2" src="https://storage.googleapis.com/derswebsitebucket/gallery/edits/P9160041.jpg" />
+                </div>
+
+                <span class="imgtitle">Athens Summer</span>
+                <div class="scrollcontainer">
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/summeredits/P5180011.jpg" />
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/summeredits/P5180016.jpg" />
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/summeredits/P5180018.jpg" />
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/summeredits/P5200049.jpg" />
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/summeredits/P5260093.jpg" />
+                    <img class="imgholder2" src="https://storage.googleapis.com/derswebsitebucket/gallery/summeredits/P6100122.jpg" />
+                </div>
+            <span class="imgtitlegone">Fall/Winter 23' "Silver Linings: A Light in the Dark"</span>
         </div>
-    </section>
-    </section>
-
-    <section class="2">
-    <h3>This website serves as the portfolio for Anders Law, as well as part of the portfolio itself. Coded from scratch using HTML, CSS, and Javascript, this site aims to illustrate Anders different skills and hobbies. By using the navigation bar at the top, you can visit different pages and explore new and exciting creations. For optimal viewing experience, please use Safari desktop browser when visiting this page. Thank you for stopping by.</h3>
-    <section class="parallax-2">
-        <div class="parallax-inner">
-            <br>
-            <h1>Mou</h1>
-            <br>
+        <div class="rightdiv2">
         </div>
-    </section>
-    <div class="buttdiv">  <a class="bttbutt" href="#">Back to Top</a>  </div>
-     </section>
-
-
+      </div>
   </body>
 </html>
