--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="dropdown-content">
             <a href="https://github.com/weekendpapa">Github</a>
             <a href="#">Processing</a>
-            <a href="#">Past Websites</a>
+            <a href="past.html">Past Websites</a>
           </div>
         </div>
 
