--- a/process.html
+++ b/process.html
@@ -22,7 +22,7 @@
     </head>
   <!-- Visible content for the page-->
   <!--main page text below-->
-  <body class="mainbody3">
+  <body class="mainbody5">
     <div class="topnav" id="myTopnav">
 
         <a href="index.html" class="active">
@@ -42,8 +42,7 @@
           <button class="dropbtn">Programming</button>
           <div class="dropdown-content">
             <a href="https://github.com/weekendpapa">Github</a>
-            <a href="#">Processing</a>
-            <a href="past.html">Past Websites</a>
+            <a href="process.html">Processing</a>
           </div>
         </div>
 
@@ -100,15 +99,15 @@
 
       <div class="backdiv3">
         <div class="leftdiv2">
-            <span class="imgtitle">Target Market</span>
+            <span class="imgtitle">blah blah</span>
             <img class="imgholder9" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/targetjpeg2.jpg" />
-            <span class="imgtitle">Moodboard</span>
+            <span class="imgtitle">blah blah</span>
             <img class="imgholder3" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/inspojpeg.jpg" />
-            <span class="imgtitle">Line Sheet</span>
+            <span class="imgtitle">blah blah</span>
             <img class="imgholder3" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/Linesheetjpeg.jpg" />
-            <span class="imgtitle">Lead Sheet</span>
+            <span class="imgtitle">blah blah</span>
             <img class="imgholder3" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/leadsheetjpeg.jpg" />
-            <span class="imgtitle">Constructed Garment</span>
+            <span class="imgtitle">blah blah</span>
             <img class="imgholder3" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantsfull.jpg" />
             <img class="imgholder3" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantsbackwaist.jpg" />
             <img class="imgholder3" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantsbottom.jpg" />
