--- a/3d.html
+++ b/3d.html
@@ -42,8 +42,7 @@
           <button class="dropbtn">Programming</button>
           <div class="dropdown-content">
             <a href="https://github.com/weekendpapa">Github</a>
-            <a href="#">Processing</a>
-            <a href="past.html">Past Websites</a>
+            <a href="process.html">Processing</a>
           </div>
         </div>
 
