--- a/process.html
+++ b/process.html
@@ -3,7 +3,7 @@
     
   <!-- Metadata for the page -->
     <head>
-        <title>Kaledo</title>
+        <title>P5.Js</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="(pages)re.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,8 +32,8 @@
         <div class="dropdown">
           <button class="dropbtn">About Me</button>
           <div class="dropdown-content">
-            <a href="#">About Me</a>
-            <a href="#">Contact</a>
+            <a href="about.html">About Me</a>
+            <a href="contact.html">Contact</a>
           </div>
         </div>
         
