--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     
   <!-- Metadata for the page -->
     <head>
-        <title>ResumePage</title>
+        <title>Contact</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="(pages)re.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,56 +11,97 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
-        <!--logos down here-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 <!--java stuff-->
         <script type="text/javascript" src="java.js"></script>
+        <!--model viewer-->
+        <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
+        <link rel="shortcut icon" type="image/x-icon" href="https://storage.googleapis.com/derswebsitebucket/logo/fav%20pink%20png.png">
+        <!--=============== REMIXICONS ===============-->
+      <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
-  <!-- Visible content for the page -->
-  <body class="bodytag">
-    <div class="biggestflex">
-    <!-- leftside begins here -->
-        <main class="bigboxleft">
-            <span class="contactinfo">1+ 678-751-6962<br>anderstlaw@gmail.com<br><br>if i am not available through any of these methods, i suggest checking the sewing lab</span>
-                <div class="logogroup">
-                    <a class="logos" href="https://www.linkedin.com/in/anders-law-b0033a20a/" target="_blank" rel="nofollow noopener noreferrer">
-                        <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                    <a class="logos" href="https://github.com/weekendpapa?tab=repositories" target="_blank" rel="nofollow noopener noreferrer">
-                        <i class="fa-brands fa-github"></i>
-                    </a>
-                    <a class="logos" href="https://www.youtube.com/channel/UClS_jO70hsDiLzHre1ibTCQ" target="_blank" rel="nofollow noopener noreferrer">
-                        <i class="fa-brands fa-youtube"></i>
-                    </a>
-                </div>    
-        </main>
-    <!-- rightside begins here -->
-        <aside class="bigboxright">
-            <div class="toptextbox">
-                <a>Contact</a>
+  <!-- Visible content for the page-->
+  <!--main page text below-->
+  <body class="mainbody">
+    <div class="topnav" id="myTopnav">
+
+        <a href="index.html" class="active">
+            <img class="derspink" src="https://storage.googleapis.com/derswebsitebucket/logo/PINKFirefly%20bubbling%20liquid%20text%20on%20black%20background%2014379.jpg" />
+        </a>
+
+        <div class="dropdown">
+          <button class="dropbtn">About Me</button>
+          <div class="dropdown-content">
+            <a href="about.html">About Me</a>
+            <a href="contact.html">Contact</a>
+          </div>
+        </div>
+        
+        <div class="dropdown">
+          <button class="dropbtn">Programming</button>
+          <div class="dropdown-content">
+            <a href="https://github.com/weekendpapa">Github</a>
+            <a href="process.html">P5.Js</a>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropbtn">Behind the Camera</button>
+          <div class="dropdown-content">
+            <a href="https://www.youtube.com/@weekendpapa">Youtube</a>
+            <a href="gallery.html">Photo Collections</a>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropbtn">Academia</button>
+          <div class="dropdown-content">
+            <a href="skatew.html">StatTrak</a>
+            <a href="ghutra.html">Ghutra</a>
+            <a href="diploma.html">Diploma</a>
+          </div>
+        </div>
+
+        <div class="dropdown">
+            <button class="dropbtn">Graphic Design</button>
+            <div class="dropdown-content">
+              <a href="photoshop.html">Photoshop</a>
+              <a href="illustrator.html">Illustrator</a>
+              <a href="ka(re)do.html">Kaledo</a>
+              <a href="3d.html">3D Design</a>
             </div>
-            <div class="buttonholder">
-                <button class="navbutton" onclick=showsidebar()>
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
-                </button>
+          </div>
+
+          <div class="dropdown">
+            <button class="dropbtn">Fashion Collections</button>
+            <div class="dropdown-content">
+              <a href="FDSA.html">FDSA</a>
+              <a href="https://trampledflowers.org">Trampled Flowers</a>
+              <a href="(re)txmi.html">TXMI Capstone</a>
             </div>
-        </aside>
-        <!-- navbar stuff-->
-        <nav>
-            <ul class="sidebar">
-                <li><a class="navtext" href="index.html">Home</a></li>
-                <li><a class="navtext" href="re(sume).html">Resume</a></li>
-                <li><a class="navtext" href="https://trampledflowers.org">Trampled Flowers</a></li>
-                <li><a class="navtext" href="job.html">Employment Tracker</a></li>
-                <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
-                <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
-                <li><a class="navtext" href="FDSA.html">FDSA</a></li>
-                <li><a class="navtext" href="3d.html">3D Modeling</a></li>
-                <li><a class="navtext" href="skatew.html">Stattrak</a></li>
-                <li><a class="navtext" href="ghutra.html">Ghutra</a></li>
-                <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-            </ul>
-        </nav>
-    </div>
+          </div>
+
+
+          <div class="dropdown">
+            <button class="dropbtn">Professional</button>
+            <div class="dropdown-content">
+              <a href="re(sume).html">Resume</a>
+              <a href="https://www.linkedin.com/in/anders-law">Linkedin</a>
+            </div>
+          </div>
+
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+      </div>
+
+
+
+
+      <div class="backdiv4">
+        <div class="leftdiv">
+            <span class="imgtextin">Anders Law<br>Alpharetta, GA 30009<br>1+(678)751-6962<br>anderstlaw@gmail.com</span>
+        </div>
+        <div class="rightdiv">
+        </div>
+      </div>
   </body>
 </html>
