--- a/re(sume).html
+++ b/re(sume).html
@@ -32,8 +32,8 @@
         <div class="dropdown">
           <button class="dropbtn">About Me</button>
           <div class="dropdown-content">
-            <a href="#">About Me</a>
-            <a href="#">Contact</a>
+            <a href="about.html">About Me</a>
+            <a href="contact.html">Contact</a>
           </div>
         </div>
         
