--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
 
       <div class="backdiv4">
         <div class="leftdiv">
-            <span class="imgtextin">Anders Law<br>Alpharetta, GA 30009<br>1+(678)751-6962<br>anderstlaw@gmail.com</span>
+            <span class="imgtextin2">Anders Law<br>Alpharetta, GA 30009<br>1+(678)751-6962<br>anderstlaw@gmail.com</span>
         </div>
         <div class="rightdiv">
         </div>
