--- a/photoshop.html
+++ b/photoshop.html
@@ -98,26 +98,10 @@
 
       <div class="backdiv3">
         <div class="leftdiv2">
-            <span class="imgtitle">Kaledo Print</span>
-            <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/HauntedHouse/AndersLawHauntedPrintLayout_Butcher%20House.jpg" />
-            <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/HauntedHouse/AndersLawHauntedPrintLayout_Deep%20Blue.jpg" />
-            <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/HauntedHouse/AndersLawHauntedPrintLayout_Foam%20Plants.jpg" />
-            <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/kanto/KantoCharizard.png" />
-            <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/kanto/KantoToxicSpike.png" />
-            <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/kanto/KantoViridianForest.png" />
+            <span class="imgtitle">Bladee Posters</span>
+            <img class="imgholder2" src="https://storage.googleapis.com/derswebsitebucket/photoshop/bladeeposter.jpg" />
+            <img class="imgholder2" src="https://storage.googleapis.com/derswebsitebucket/photoshop/bladeegreen.jpg" />
             
-            <span class="imgtitle">Kaledo Knit</span>
-            <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Likklesimz/AndersLawKnitPatternSimz_Cookie%20W_%20Milk.jpg" />
-            <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Likklesimz/AndersLawKnitPatternSimz_Strawberry%20Shortcake.jpg" />
-            <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Likklesimz/AndersLawKnitPatternSimz_Sunlight%20Reef.jpg" />
-            <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Boards/AndersLawKnitStripeBoards_Night%20Swimming.jpg" />
-            <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Boards/AndersLawKnitStripeBoards_Original%20Fence.jpg" />
-            <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Boards/AndersLawKnitStripeBoards_Sienna%20Steps.jpg" />
-            <span class="imgtitle">Kaledo Weave</span>
-            <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/weave/weave4web_Blood%20Orangecropped.jpg" />
-            <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/weave/weave4web_Cool%20Breezecropped.jpg" />
-            <img class="imgholder" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/weave/weave4web_Seashellscropped.jpg" />
-
             <span class="imgtitlegone">Fall/Winter 23' "Silver Linings: A Light in the Dark"</span>
         </div>
         <div class="rightdiv2">
