--- a/process.html
+++ b/process.html
@@ -98,20 +98,9 @@
 
       <div class="backdiv3">
         <div class="leftdiv2">
-            <span class="imgtitle">blah blah</span>
-            <img class="imgholder9" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/targetjpeg2.jpg" />
-            <span class="imgtitle">blah blah</span>
-            <img class="imgholder3" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/inspojpeg.jpg" />
-            <span class="imgtitle">blah blah</span>
-            <img class="imgholder3" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/Linesheetjpeg.jpg" />
-            <span class="imgtitle">blah blah</span>
-            <img class="imgholder3" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/leadsheetjpeg.jpg" />
-            <span class="imgtitle">blah blah</span>
-            <img class="imgholder3" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantsfull.jpg" />
-            <img class="imgholder3" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantsbackwaist.jpg" />
-            <img class="imgholder3" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantsbottom.jpg" />
-            <img class="imgholder3" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantspocket.jpg" />
-            <img class="imgholder3" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantswaist.jpg" />
+            <span class="imgtitle">P5.Js Test</span>
+            <iframe src="https://editor.p5js.org/weekendpapa/full/zAPS3Ip2b"></iframe>
+            
 
             <span class="imgtitlegone">Fall/Winter 23' "Silver Linings: A Light in the Dark"</span>
         </div>
