--- a/ghutra.html
+++ b/ghutra.html
@@ -49,7 +49,7 @@
           <button class="dropbtn">Behind the Camera</button>
           <div class="dropdown-content">
             <a href="https://www.youtube.com/@weekendpapa">Youtube</a>
-            <a href="#">Photo Collections</a>
+            <a href="gallery.html">Photo Collections</a>
           </div>
         </div>
 
