--- a/photoshop.html
+++ b/photoshop.html
@@ -98,9 +98,12 @@
 
       <div class="backdiv3">
         <div class="leftdiv2">
-            <span class="imgtitle">Bladee Posters</span>
+            <span class="imgtitle">Posters</span>
             <img class="imgholder2" src="https://storage.googleapis.com/derswebsitebucket/photoshop/bladeeposter.jpg" />
             <img class="imgholder2" src="https://storage.googleapis.com/derswebsitebucket/photoshop/bladeegreen.jpg" />
+            
+            <span class="imgtitle">Tabloids</span>
+            <img class="imgholder2" src="https://storage.googleapis.com/derswebsitebucket/photoshop/aperture.jpg" />
             
             <span class="imgtitlegone">Fall/Winter 23' "Silver Linings: A Light in the Dark"</span>
         </div>
