--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </section>
 
     <section class="2">
-    <h3>This website serves as the portfolio for Anders Law, as well as part of the portfolio itself. Coded from scratch using HTML, CSS, and Javascript, this site aims to illustrate Anders different skills and hobbies. By using the navigation bar at the top, you can visit different pages and explore new and exciting creations. For optimal viewing experience, please use Safari desktop browser when visiting this page. Thank you for stopping by.</h3>
+    <h3 id="hi">This website serves as the portfolio for Anders Law, as well as part of the portfolio itself. Coded from scratch using HTML, CSS, and Javascript, this site aims to illustrate Anders different skills and hobbies. By using the navigation bar at the top, you can visit different pages and explore new and exciting creations. For optimal viewing experience, please use Safari desktop browser when visiting this page. Thank you for stopping by.</h3>
     <section class="parallax-2">
         <div class="parallax-inner">
             <br>
@@ -126,7 +126,11 @@
             <br>
         </div>
     </section>
-    <div class="buttdiv">  <a class="bttbutt" href="#">Back to Top</a>  </div>
+    <div class="buttdiv">  <a class="bttbutt" href="#" data-reload>Back to Top</a>     </div>
+    
+    <!--<div class="buttdiv">  <a class="bttbutter" href="#en">en</a>
+      <a class="bttbutter" href="#it">it</a>
+    </div>-->
      </section>
 
 
