--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <button class="dropbtn">Programming</button>
           <div class="dropdown-content">
             <a href="https://github.com/weekendpapa">Github</a>
-            <!--<a href="process.html">P5.Js</a>-->
+            <a href="process.html">P5.Js</a>
           </div>
         </div>
 
