--- a/process.html
+++ b/process.html
@@ -98,9 +98,9 @@
 
       <div class="backdiv3">
         <div class="leftdiv2">
-            <span class="imgtitle">Interact and Explore!</span>
+            <span class="imgtitle2">Projects Might Need Time to Load</span>
             <iframe class="p5er" src="https://editor.p5js.org/weekendpapa/full/zAPS3Ip2b"></iframe>
-            
+            <iframe class="p5er" src="https://editor.p5js.org/weekendpapa/full/cpOwtE153"></iframe>
 
             <span class="imgtitlegone">Fall/Winter 23' "Silver Linings: A Light in the Dark"</span>
         </div>
