--- a/(re)txmi.html
+++ b/(re)txmi.html
@@ -3,7 +3,7 @@
     
   <!-- Metadata for the page -->
     <head>
-        <title>Kaledo</title>
+        <title>TXMI</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="(pages)re.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -86,6 +86,7 @@
             <div class="dropdown-content">
               <a href="re(sume).html">Resume</a>
               <a href="https://www.linkedin.com/in/anders-law">Linkedin</a>
+              <a href="intern.html">WalkingCo Intern</a>
             </div>
           </div>
         
