--- a/re(sume).html
+++ b/re(sume).html
@@ -87,6 +87,7 @@
             <div class="dropdown-content">
               <a href="re(sume).html">Resume</a>
               <a href="https://www.linkedin.com/in/anders-law">Linkedin</a>
+              <a href="intern.html">WalkingCo Intern</a>
             </div>
           </div>
 
