--- a/gallery.html
+++ b/gallery.html
@@ -114,11 +114,12 @@
                 <span class="imgtitle">Athens Summer</span>
                 <div class="scrollcontainer">
                     <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/summeredits/P5180011.jpg" />
-                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/summeredits/P5180016.jpg" />
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/summeredits/P5200046.JPG" />
                     <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/summeredits/P5180018.jpg" />
                     <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/summeredits/P5200049.jpg" />
-                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/summeredits/P5260093.jpg" />
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/summeredits/P5210059.JPG" />
                     <img class="imgholder2" src="https://storage.googleapis.com/derswebsitebucket/gallery/summeredits/P6100122.jpg" />
+                    <img class="imgholder2" src="https://storage.googleapis.com/derswebsitebucket/gallery/summeredits/P6100118.JPG" />
                 </div>
             <span class="imgtitlegone">Fall/Winter 23' "Silver Linings: A Light in the Dark"</span>
         </div>
