--- a/re(sume).html
+++ b/re(sume).html
@@ -50,6 +50,7 @@
           <div class="dropdown-content">
             <a href="https://github.com/weekendpapa">Github</a>
             <a href="process.html">P5.Js</a>
+            <a href="javademos.html">JS Demos</a>
           </div>
         </div>
 
