photos added to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -130,6 +130,19 @@
                     <img class="imgholder2" src="https://storage.googleapis.com/derswebsitebucket/gallery/summeredits/P6100122.jpg" />
                     <img class="imgholder2" src="https://storage.googleapis.com/derswebsitebucket/gallery/summeredits/P6100118.JPG" />
                 </div>
+
+                <span class="imgtitle">Snow Day</span>
+                <div class="scrollcontainer">
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/jpg2/P1100160.jpg" />
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/jpg2/P1100163.jpg" />
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/jpg2/P1100172.jpg" />
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/jpg2/P1100178.jpg" />
+                    <img class="imgholder2"  src="https://storage.googleapis.com/derswebsitebucket/gallery/jpg2/P1100186.jpg" />
+                    <img class="imgholder2" src="https://storage.googleapis.com/derswebsitebucket/gallery/jpg2/P1100189.jpg" />
+                    <img class="imgholder2" src="https://storage.googleapis.com/derswebsitebucket/gallery/jpg2/P1100192.jpg" />
+                    <img class="imgholder2" src="https://storage.googleapis.com/derswebsitebucket/gallery/jpg2/P1100197.jpg" />
+                    <img class="imgholder2" src="https://storage.googleapis.com/derswebsitebucket/gallery/jpg2/P1100200.jpg" />
+                </div>
             <span class="imgtitlegone">Fall/Winter 23' "Silver Linings: A Light in the Dark"</span>
         </div>
         <div class="rightdiv2">
